--- a/package.json
+++ b/package.json
@@ -47,8 +47,8 @@
         "tippy.js": "^6.3.7"
     },
     "devDependencies": {
-        "@eslint/compat": "^1.2.7",
-        "@eslint/js": "^9.24.0",
+        "@eslint/compat": "^1.3.1",
+        "@eslint/js": "^9.31.0",
         "@melt-ui/pp": "^0.3.2",
         "@melt-ui/svelte": "^0.86.5",
         "@playwright/test": "^1.51.1",
@@ -92,7 +92,10 @@
             "@sentry/cli",
             "esbuild",
             "svelte-preprocess"
-        ]
+        ],
+        "overrides": {
+            "@eslint/plugin-kit": "^0.3.3"
+        }
     },
     "packageManager": "pnpm@10.7.0+sha512.6b865ad4b62a1d9842b61d674a393903b871d9244954f652b8842c2b553c72176b278f64c463e52d40fff8aba385c235c8c9ecf5cc7de4fd78b8bb6d49633ab6"
 }
